--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
   ],
   "require": {
     "php": ">=5.3",
-    "symfony/framework-bundle": "2.*",
-    "symfony/symfony": "2.*",
+    "symfony/framework-bundle": "2.*|3.*",
+    "symfony/symfony": "2.*|3.*",
     "dompdf/dompdf": "^0.7"
   },
   "require-dev": {
-    "symfony/phpunit-bridge": "2.*"
+    "symfony/phpunit-bridge": "2.*|3.*"
   },
   "autoload": {
     "psr-4": {
